@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 37d0c2e5ae04890ea67bfd99ed49ba716541f542 ChangeLog
+SHA1 18197dde642dabe3e0377966ae3f041fc9287776 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 20999103e9ea82afe7b7a2d24712555304aa9f51 META.yml
-SHA1 b18443b2e3bcdaef0495a9bbdd2ff2b088102264 Makefile.PL
+SHA1 c5f1b800edd13cb0c8d543ca08323fc77681bc8c META.yml
+SHA1 bf739d484fc7af8d7c2f95a3212a62876c6cc9ae Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 99238d4cca32ed6a81737464d08b81c25d4dde4f lib/Net/FullAuto.pm
+SHA1 1d39361ad0300196990e6782efacbf65966ccfb1 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT0oL3AAoJEBa/9Pad787Ez7cH/A2o0u8L+YwEQdTo5nztNWN7
-n2mFnc+3G00a5vTAHf8lCfGhyyiS7l87CqofRoL0weJuzc6NzpcuEtkLipoXbogd
-8Xvq4lmSaJl0TXG/oDZWpEoLXu3OIaDO0TAXlUpS7FM9aKGW8JIw77hwYvgjV+Ag
-W2L2EnSW3DbwmEXlrv8oltvNGHVtf+gyNDRRxKr6jlXH4muHc3jsSmVnmhoBjIZl
-p6HnQWMgyoW1RKP4WjjrdvUm/+BGklD2J9MkVQJcQinL/xrU43W7nO6HIs2CDHNs
-SK03gUn0fNSRV1Ee7EmDdaTv4b/CuSdYcBmZZ7zCU7K/Bkg0nWeTDhoyD2BDh5s=
-=R3O4
+iQEcBAEBAgAGBQJT1M1iAAoJEBa/9Pad787Ejd0H/jY9Qf8g1FHCiN2Lqrry6llG
+JrMRaeznHwquxl0DWKTIBZ6nFaiMv3C4so2tHyeYv+ZcXKqM54sA6NqhrNAUKmrp
+AVCKKlxABshFkgAy4Rgu7gYwC33RvrUWIAn5X9sxX3JBNwrQaVt8xFROPSbX/0KH
++vnA752T1JT+avnxma+Au0MDnEO+/KJ2oOfYeQGoWdUOA/y3layn1P67X+0Jmhp4
+XyHMv8VdxhSWPpA0XHc9mao9lpaNOCmEzaLUEOBLfNg8I49fkl1puniGhXbx9h9c
+HpMkk6EkorxPUUaLhMfUHWtLMmsBTt4OZ5TPyTVgSTvmn4r4WzKGM+qJK3SOOZc=
+=bAZm
 -----END PGP SIGNATURE-----
