@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999980';
+our $VERSION='0.9999999981';
 
 
 use 5.005;
